<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.StartupFragment">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp" 
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher" 
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

    <!-- Slogan -->
    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/startup_slogan"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/startup_welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@+id/sloganTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Features Section -->
    <LinearLayout
        android:id="@+id/featuresLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/FeatureTextViewStyle"
            android:drawableStart="@drawable/ic_track_expenses" 
            android:text="@string/feature_track_expenses" />

        <TextView
            style="@style/FeatureTextViewStyle"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_set_goals" 
            android:text="@string/feature_set_goals" />

        <TextView
            style="@style/FeatureTextViewStyle"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_get_notifications" 
            android:text="@string/feature_get_notifications" />

    </LinearLayout>

    <!-- Get Started Button -->
    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toTopOf="@+id/termsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Terms Text -->
    <TextView
        android:id="@+id/termsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/startup_terms"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 